edit links styling

--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -41,3 +41,11 @@ html:not(.touch) .editable-item {
         }
     }
 }
+
+
+.raa-icon-comment {
+    @extend copy-19;
+    font-size: 19px !important;    
+    color: $turquoise;
+    cursor: help;
+}
