--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -26,3 +26,13 @@ html:not(.touch) .editable-item {
         }
     }
 }
+
+.raa-icon-comment {
+    display: inline-block;
+    content: "x"; 
+    width: 20px;
+    height: 20px;
+    background: red;
+//    @include icon( $icon-edit );
+    color: $orange-50;
+}
