--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -21,7 +21,12 @@
     <div class="grid-wrapper">
         <div class="grid grid-2-3">
             <div class="hgroup text editable-item">
-                <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">@Model.NewVacancyViewModel.Title (Preview)</h1>
+                <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">@Model.NewVacancyViewModel.Title (Preview)
+                    @if (!string.IsNullOrEmpty(Model.NewVacancyViewModel.TitleComment))
+                    {
+                        <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                    }
+                </h1>
                 <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name</p>
                 <a href="#" class="edit-comment-link">Edit</a>
             </div>
@@ -33,6 +38,10 @@
                 <div class="inner-block-padr">
                     <div class="editable-item">
                         <div class="text" itemprop="description">
+                            @if (!string.IsNullOrEmpty(Model.NewVacancyViewModel.ShortDescriptionComment))
+                            {
+                                <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                            }
                             <p id="vacancy-description">@Model.NewVacancyViewModel.ShortDescription</p>
                         </div>
                         <a href="#" class="edit-comment-link">Edit</a>
@@ -46,9 +55,16 @@
                     <div class="editable-item">
                         <p id="vacancy-closing-date">
                             Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday()
-                            <i class="fa fa-flag the-icon" style="color: red;" title="@message"></i>
+
+                            @if (string.IsNullOrEmpty(Model.VacancySummaryViewModel.ClosingDateComment))
+                            {
+                                <i class="fa fa-flag the-icon" style="color: red;" title="@message"></i>
+                            }
+                            else{
+                                <i class="fa fa-edit the-icon" style="color: blue;" title="@message"></i>
+                            }
                         </p>
-                        <a href="#" class="edit-comment-link">Edit</a>
+                        <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancySummary, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })" class="edit-comment-link">Edit</a>
                     </div>
                 }
                 else
@@ -56,9 +72,16 @@
                     <div class="editable-item">
                         <p id="vacancy-closing-date">
                             Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday()
-                            <i class="fa fa-check the-icon" style="color: green;"></i>
+                            @if (string.IsNullOrEmpty(Model.VacancySummaryViewModel.ClosingDateComment))
+                            {
+                                <i class="fa fa-check the-icon" style="color: green;"></i>
+                            }
+                            else
+                            {
+                                <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                            }
                         </p>
-                        <a href="#" class="edit-comment-link">Edit</a>
+                        <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancySummary, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })" class="edit-comment-link">Edit</a>
                     </div>
                 }
             </div>
@@ -68,7 +91,16 @@
             <div class="grid grid-1-3">
                 <div class="inner-block-padr">
                     <div class="editable-item">
-                        <h3 class="bold-small">Working week <i class="fa fa-check the-icon" style="color: green;"></i></h3>
+                        <h3 class="bold-small">Working week
+                            @if (string.IsNullOrEmpty(Model.VacancySummaryViewModel.WorkingWeekComment))
+                            {
+                                <i class="fa fa-check the-icon" style="color: green;"></i>
+                            }
+                            else
+                            {
+                                <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                            }
+                        </h3>
                         <p id="vacancy-working-week" itemprop="workHours">
                             @Model.VacancySummaryViewModel.WorkingWeek<br />Total hours per week: @Model.VacancySummaryViewModel.HoursPerWeek
                             @if (Model.VacancySummaryViewModel.HoursPerWeek > 40)
@@ -83,11 +115,29 @@
                         <h3 class="bold-small">
                             @if (Model.VacancySummaryViewModel.WageType == WageType.Custom)
                             {
-                            <span>@Model.VacancySummaryViewModel.WageUnitDisplayText wage <i class="fa fa-check the-icon" style="color: green;"></i></span>
+                            <span>@Model.VacancySummaryViewModel.WageUnitDisplayText wage
+                                @if (string.IsNullOrEmpty(Model.VacancySummaryViewModel.WageComment))
+                                {
+                                    <i class="fa fa-check the-icon" style="color: green;"></i>
+                                }
+                                else
+                                {
+                                    <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                                }
+                            </span>
                             }
                             else
                             {
-                            <span>Wage <i class="fa fa-check the-icon" style="color: green;"></i></span>
+                            <span>Wage 
+                                @if (string.IsNullOrEmpty(Model.VacancySummaryViewModel.WageComment))
+                                {
+                                    <i class="fa fa-check the-icon" style="color: green;"></i>
+                                }
+                                else
+                                {
+                                    <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                                }
+                            </span>
                             }
                         </h3>
                         <p id="vacancy-wage">@Model.VacancySummaryViewModel.WageDisplayText</p>
@@ -128,13 +178,22 @@
                             {
                             <i class="fa fa-check the-icon" style="color: green;"></i>
                             }
+                            @if (!string.IsNullOrEmpty(Model.VacancySummaryViewModel.DurationComment))
+                            {
+                                <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                            }
                         </h3>
                         <p id="vacancy-expected-duration">@Model.VacancySummaryViewModel.Duration @Model.VacancySummaryViewModel.DurationTypeDisplayText</p>
                         <a href="#" class="edit-comment-link">Edit</a>
                     </div>
 
                     <div class="editable-item">
-                        <h3 class="bold-small">Possible start date</h3>
+                        <h3 class="bold-small">Possible start date
+                            @if (!string.IsNullOrEmpty(Model.VacancySummaryViewModel.PossibleStartDateComment))
+                            {
+                                <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                            }
+                        </h3>
                         @if (ViewData.ModelState.HasWarningsFor("VacancySummaryViewModel.PossibleStartDate"))
                         {
                         var message = ViewData.ModelState.WarningMessageFor("VacancySummaryViewModel.PossibleStartDate");
@@ -154,7 +213,8 @@
                     </div>
                     
                     <div class="editable-item">
-                        <h3 class="bold-small">Apprenticeship level</h3>
+                        <h3 class="bold-small">Apprenticeship level
+                        </h3>
                         <p id="vacancy-type" itemprop="employmentType">@Html.DisplayFor(m => m.NewVacancyViewModel.ApprenticeshipLevel) Level Apprenticeship</p>
                         <a href="#" class="edit-comment-link">Edit</a>
                     </div>
@@ -168,6 +228,10 @@
             </div>
             <div class="grid grid-2-3">
                 <div class="text editable-item" itemprop="responsibilities">
+                    @if (!string.IsNullOrEmpty(Model.VacancySummaryViewModel.LongDescriptionComment))
+                    {
+                        <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                    }
                     <p id="vacancy-full-descrpition">@Html.Raw(Model.VacancySummaryViewModel.LongDescription)</p>
                     <a href="#" class="edit-comment-link">Edit</a>
                 </div>
@@ -182,7 +246,12 @@
                 @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredSkills))
                 {
                     <div class="editable-item">
-                        <h3 class="heading-small">Desired skills</h3>
+                        <h3 class="heading-small">Desired skills
+                            @if (!string.IsNullOrEmpty(Model.VacancyRequirementsProspectsViewModel.DesiredSkillsComment))
+                            {
+                                <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                            }
+                        </h3>
                         <p id="vacancy-skills-required" itemprop="skills">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredSkills)</p>
                         <a href="#" class="edit-comment-link">Edit</a>
                     </div>
@@ -190,7 +259,12 @@
                 @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.PersonalQualities))
                 {
                     <div class="editable-item">
-                        <h3 class="heading-small">Personal qualities</h3>
+                        <h3 class="heading-small">Personal qualities
+                            @if (!string.IsNullOrEmpty(Model.VacancyRequirementsProspectsViewModel.PersonalQualitiesComment))
+                            {
+                                <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                            }
+                        </h3>
                         <p id="vacancy-qualities-required" itemprop="qualities">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.PersonalQualities)</p>
                         <a href="#" class="edit-comment-link">Edit</a>
                     </div>
@@ -198,7 +272,12 @@
                 @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications))
                 {
                     <div class="editable-item">
-                        <h3 class="heading-small">Qualifications required</h3>
+                        <h3 class="heading-small">Qualifications required
+                            @if (!string.IsNullOrEmpty(Model.VacancyRequirementsProspectsViewModel.DesiredQualificationsComment))
+                            {
+                                <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                            }
+                        </h3>
                         <p id="vacancy-qualifications-required" itemprop="qualifications">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications)</p>
                         <a href="#" class="edit-comment-link">Edit</a>
                     </div>
@@ -212,7 +291,12 @@
             @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.FutureProspects))
             {
                 <div class="editable-item">
-                    <h3 class="heading-small">Future prospects</h3>
+                    <h3 class="heading-small">Future prospects
+                        @if (!string.IsNullOrEmpty(Model.VacancyRequirementsProspectsViewModel.FutureProspectsComment))
+                        {
+                            <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                        }
+                    </h3>
                     <p id="vacancy-future-prospects" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.FutureProspects)</p>
                     <a href="#" class="edit-comment-link">Edit</a>
                 </div>
@@ -220,7 +304,12 @@
             @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider))
             {
                 <div class="editable-item">
-                    <h3 class="heading-small">Things to consider</h3>
+                    <h3 class="heading-small">Things to consider
+                        @if (!string.IsNullOrEmpty(Model.VacancyRequirementsProspectsViewModel.ThingsToConsiderComment))
+                        {
+                            <i class="fa fa-edit the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i>
+                        }
+                    </h3>
                     <p id="vacancy-reality-check" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider)</p>
                     <a href="#" class="edit-comment-link">Edit</a>
                 </div>
