--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -12,16 +12,31 @@
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.AddLocations, FormMethod.Post))
 {
+    @Html.HiddenFor(m => m.Ukprn);
     @Html.HiddenFor(m => m.Ern);
     @Html.HiddenFor(m => m.ProviderSiteErn);
     @Html.HiddenFor(m => m.VacancyGuid);
-    <div form-group>
+    @*<div form-group>
         @Html.FormTextFor(model => model.PostcodeSearch, controlHtmlAttributes: new {type = "text", @class = "form-control-medium", size = "40"}, labelHtmlAttributes: new {@class = "bold-small"})
         <button type="submit" class="button" name="AddLocations" value="SearchLocations">Find address</button>
-    </div>
+    </div>*@
 
-    if (Model.SearchResultAddresses != null && Model.SearchResultAddresses.Any())
-    {
+    <div id="address-lookup">
+        <div class="form-group form-group-compound" id="addressInputWrapper">
+            <label for="postcode-search" class="form-label bold-small">Enter the employer's postcode or address</label>
+            <input id="postcode-search" type="text" class="form-control form-control-1-3" spellcheck="false" autocorrect="off"/>
+            <span class="visuallyhidden" id="ariaAddressEntered" aria-live="polite"></span>
+        </div>
+        <div id="address-manual" class="form-group form-group-compound">
+            @*<a href="#" class="copy-19" id="enterAddressManually">Or enter address manually</a>*@
+            <span class="toggle-content hide-nojs loading-text" id="addressLoading">Loading address...</span>
+            <span style="color: red" id="postcodeServiceUnavailable" class="copy-19 toggle-content hide-nojs text">Service si currently unavailable, please enter the full postcode</span>
+        </div>
+    </div>
+    
+    <div class="hide-js">
+        @if (Model.SearchResultAddresses != null && Model.SearchResultAddresses.Any())
+        {
         <div class="form-group">
             <div class="tabbed-element tab1 active width-all-1-1">
                 <table class="no-btm-margin">
@@ -49,59 +64,133 @@
                 </table>
             </div>
         </div>
-            }
+        }
 
-            if (Model.Addresses != null && Model.Addresses.Any())
-            {
-            <div class="form-group">
-                <div class="tabbed-element tab1 active width-all-1-1">
-                    <table class="no-btm-margin">
-                        <colgroup>
-                            <col class="t50">
-                            <col class="t30">
-                            <col class="t20">
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th>Address</th>
-                                <th>Number of positions</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @for (var i = 0; i < Model.Addresses.Count; i++)
-                            {
-                                <tr>
-                                    <td>
-                                        @string.Format("{0}, {1}, {2}", Model.Addresses.ToList()[i].Address.Postcode, Model.Addresses.ToList()[i].Address.AddressLine1, Model.Addresses.ToList()[i].Address.AddressLine4)
-                                        @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.Postcode, new { @id = "addresses_" + i + "address__Postcode", Name = "Addresses[" + i + "].Address.Postcode" })
-                                        @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine1, new { @id = "addresses_" + i + "address__AddressLine1", Name = "Addresses[" + i + "].Address.AddressLine1" })
-                                        @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine2, new { @id = "addresses_" + i + "address__AddressLine2", Name = "Addresses[" + i + "].Address.AddressLine2" })
-                                        @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine3, new { @id = "addresses_" + i + "address__AddressLine3", Name = "Addresses[" + i + "].Address.AddressLine3" })
-                                        @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine4, new { @id = "addresses_" + i + "address__AddressLine4", Name = "Addresses[" + i + "].Address.AddressLine4" })
-                                    </td>
-                                    <td>
-                                        @Html.TextBoxFor(m => Model.Addresses.ToList()[i].NumberOfPositions, new { @id = "addresses_" + i + "__numberofpositions", Name = "Addresses[" + i + "].NumberOfPositions" })
-                                    </td>
-                                    <td>
-                                        @{
-                                            var buttonName = "RemoveLocation-" + i;
-                                        }
-                                        <button id="removeLocation" type="submit" class="button-link" name="AddLocations" value="@buttonName">Remove</button>
-                                    </td>
-                                </tr>
-                                            }
-                        </tbody>
-                    </table>
-                </div>
+        @if (Model.Addresses != null && Model.Addresses.Any())
+        {
+        <div class="form-group">
+            <div class="tabbed-element tab1 active width-all-1-1">
+                <table class="no-btm-margin">
+                    <colgroup>
+                        <col class="t50">
+                        <col class="t30">
+                        <col class="t20">
+                    </colgroup>
+                    <thead>
+                    <tr>
+                        <th>Address</th>
+                        <th>Number of positions</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    @for (var i = 0; i < Model.Addresses.Count; i++)
+                    {
+                        <tr>
+                            <td>
+                                @string.Format("{0}, {1}, {2}", Model.Addresses.ToList()[i].Address.Postcode, Model.Addresses.ToList()[i].Address.AddressLine1, Model.Addresses.ToList()[i].Address.AddressLine4)
+                                @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.Postcode, new {@id = "addresses_" + i + "address__Postcode", Name = "Addresses[" + i + "].Address.Postcode"})
+                                @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine1, new {@id = "addresses_" + i + "address__AddressLine1", Name = "Addresses[" + i + "].Address.AddressLine1"})
+                                @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine2, new {@id = "addresses_" + i + "address__AddressLine2", Name = "Addresses[" + i + "].Address.AddressLine2"})
+                                @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine3, new {@id = "addresses_" + i + "address__AddressLine3", Name = "Addresses[" + i + "].Address.AddressLine3"})
+                                @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine4, new {@id = "addresses_" + i + "address__AddressLine4", Name = "Addresses[" + i + "].Address.AddressLine4"})
+                            </td>
+                            <td>
+                                @Html.TextBoxFor(m => Model.Addresses.ToList()[i].NumberOfPositions, new {@id = "addresses_" + i + "__numberofpositions", Name = "Addresses[" + i + "].NumberOfPositions"})
+                            </td>
+                            <td>
+                                @{
+                                    var buttonName = "RemoveLocation-" + i;
+                                }
+                                <button id="removeLocation" type="submit" class="button-link" name="AddLocations" value="@buttonName">Remove</button>
+                            </td>
+                        </tr>
+                    }
+                    </tbody>
+                </table>
             </div>
-                                            }
+        </div>
+        }
 
-                                            if (Model.Addresses != null && Model.Addresses.Any())
-                                            {
-                                                <div class="form-group">
-                                                    @Html.FormTextAreaFor(m => m.AdditionalLocationInformation, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;" }, labelHtmlAttributes: new { @class = "bold-small" })
-                                                </div>
-            <button type="submit" class="button" name="AddLocations" value="Locations">Save and continue</button>
-            }
-            }
+        @if (Model.Addresses != null && Model.Addresses.Any())
+        {
+        <div class="form-group">
+            @Html.FormTextAreaFor(m => m.AdditionalLocationInformation, controlHtmlAttributes: new {@class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;"}, labelHtmlAttributes: new {@class = "bold-small"})
+        </div>
+        <button type="submit" class="button" name="AddLocations" value="Locations">Save and continue</button>
+        }
+    </div>
+
+    <div>
+        <fieldset class="fieldset-with-border" id="locationAddressesTable" data-bind="style: {'display': locationAddressesStatus() }">
+            <div>
+                <table class="grid-3-4">
+                    <colgroup>
+                        <col class="t40">
+                        <col class="t25">
+                        <col class="t20">
+                        <col>
+                    </colgroup>
+
+                    <thead>
+                    <tr>
+                        <th>
+                            <span class="heading-span">Location</span>
+                        </th>
+                        <th>
+                            <span class="heading-span">Number of positions</span>
+                        </th>
+                        <th>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody id="location-addresses" data-bind="foreach: locationAddresses">
+                    <tr>
+                        <td>
+                            <span type="text" data-bind="text: itemFriendlyAddress()" maxlength="50" />
+                        </td>
+                        <td>
+                            <input maxlength="4" pattern="[0-9]*" class="form-control qual-input-edit qual-year" type="text" data-bind="value: itemNumberOfPositions, attr:{'name':'Addresses[' + $index() +'].NumberOfPositions', 'id':'addresses_'+ $index() + '__numberofpositions' }">
+                            <input type="hidden" data-bind="value: itemAddressLine1, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine1', 'id':'addresses_'+ $index() + 'address__AddressLine1' }">
+                            <input type="hidden" data-bind="value: itemAddressLine2, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine2', 'id':'addresses_'+ $index() + 'address__AddressLine2' }">
+                            <input type="hidden" data-bind="value: itemAddressLine3, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine3', 'id':'addresses_'+ $index() + 'address__AddressLine3' }">
+                            <input type="hidden" data-bind="value: itemAddressLine4, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine4', 'id':'addresses_'+ $index() + 'address__AddressLine4' }">
+                            <input type="hidden" data-bind="value: itemPostcode, attr:{'name':'Addresses[' + $index() +'].Address.Postcode', 'id':'addresses_'+ $index() + 'address__Postcode' }">
+                            <input type="hidden" data-bind="value: itemUprn, attr:{'name':'Addresses[' + $index() +'].Address.Uprn', 'id':'addresses_'+ $index() + 'address__Uprn' }">
+                        </td>
+                        <td class="ta-center">
+                            <a href="#"  data-bind="click: $root.removeLocationAddress">Remove</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </fieldset>
+
+        <div class="form-group">
+            @Html.FormTextAreaFor(m => m.AdditionalLocationInformation, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;" }, labelHtmlAttributes: new { @class = "bold-small" })
+        </div>
+        <button type="submit" class="button" name="AddLocations" value="Locations">Save and continue</button>
+    </div>
+}
+
+
+
+@section scripts {
+    @Scripts.Render("~/bundles/knockout")
+
+    <script type="text/javascript">
+        var addressesData = null;
+
+        addressesData = @Html.Raw(Json.Encode(Model.Addresses));
+
+        if (!addressesData) addressesData = [];
+
+        function getLocationAddressesData() {
+            return addressesData;
+        }
+
+    </script>
+
+    @Scripts.Render("~/bundles/location")
+}
