new icons and new colours

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_components.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_components.scss
@@ -3,6 +3,7 @@
 @import "components/buttons";
 @import "components/progress-indicator";
 @import "components/forms";
+@import "components/forms/form-validation";
 @import "components/grid";
 @import "components/tables";
 @import "components/lists";
