--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/base/variables/_colours.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/base/variables/_colours.scss
@@ -111,8 +111,8 @@ $error-background: #fef7f7;
 $success-colour: $turquoise;
 $success-background: lighten($turquoise, 55%);
 
-$warning-colour: $orange;
-$warning-background: $orange-25;
+$warning-colour: $light-blue;
+$warning-background: $light-blue-25;
 
 $info-colour: $light-blue;
 $info-background: $light-blue-25;
