--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
@@ -6132,13 +6132,16 @@ html:not(.touch) .editable-item:hover {
   html:not(.touch) .editable-item:hover .edit-comment-link {
     visibility: visible; }
 
+.fa-flag {
+  color: #6f72af; }
+
+.fa-check {
+  color: #006435; }
+
 .raa-icon-comment {
-  display: inline-block;
-  content: "x";
-  width: 20px;
-  height: 20px;
-  background: red;
-  color: #fabb96; }
+  font-size: 19px !important;
+  color: #28a197;
+  cursor: help; }
 
 .applicant-location,
 .applicant-distance {
